--- a/style.css
+++ b/style.css
@@ -30,3 +30,34 @@ p{
     margin: .5em 0;
     border: 1px solid #666;
 }
+.btn:hover{
+    background: #eaeaea;
+    color: #333;
+}
+
+/* Header Showcase */
+#showcase{
+    min-height: 450px;
+    color: #fff;
+    text-align: center;
+}
+#showcase .bg-image{
+    position: absolute;
+    background: #333 url('./asset/bg-image.jpg');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 100%;
+    height: 450px;
+    z-index: -1;
+    opacity: 0.4;
+}
+#showcase h1{
+    padding-top: 100px;
+    padding-bottom: 0;
+}
+#showcase .content-wrap{
+    padding: 0 1.5em;
+}
+
+/* Section A*/
