--- a/style.css
+++ b/style.css
@@ -83,3 +83,21 @@ p{
 .card-content{
     padding: 1.5em;
 }
+/* Section C */
+
+#section-c{
+    background: #fff;
+    color: #333;
+    padding: 2em;
+}
+
+/* Section D */
+#section-d .box{
+    padding: 2em;
+    color: #fff;
+}
+#section-d .box:first-child{
+    background: #2690d4;
+}
+
+/* Footer */
