--- a/style.css
+++ b/style.css
@@ -101,3 +101,13 @@ p{
 }
 
 /* Footer */
+#main-footer{
+    padding: 2em;
+    background: #000;
+    color: #fff;
+    text-align: center;
+}
+#main-footer a{
+    color: #2690d4;
+    text-decoration: none;
+}
