--- a/src/App.css
+++ b/src/App.css
@@ -43,7 +43,8 @@ p{
 }
 #showcase .bg-image{
     position: absolute;
-    background: #333 url('./asset/bg-image.jpg');
+    background: #333;
+    background-image: url('./bg.jpg');
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
